# surfspots-python-django

./: README.md  license.txt  pyproject.toml
backend/: permissions.py  settings.py  urls.py
restaurants/: admin.py  models.py  serializer.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py  0002_restaurant_email_restaurant_number.py
surfspots/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
surfspots/migrations/: 0001_initial.py  0002_alter_surfspot_image_and_more.py  0002_surfspot_image_surfspot_magic_seaweed_link.py  0003_alter_surfspot_image_and_more.py  0004_alter_surfspot_address_alter_surfspot_country_and_more.py  0005_surfspot_city_surfspot_restaurants_nearby.py  0006_surfspot_google_directions_link.py  0007_surfspot_latitude_surfspot_longitude.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
